test/scc_test/decl/semantic-errors/051.a
051.t:1:5: error: size of array has non-integer type